--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-07-19 06:19:16
+lastsearch = 2024-07-19 11:47:09
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/everon/chan-ga-goi-everon.html
 
 [songhongonline.vn]
 match = 0.0%%
-title = Bộ sản phẩm SH_BC22 066
-url = https://songhongonline.vn/products/bo-san-pham-song-hong-sh-bc22-1
+title = Bộ sản phẩm SH_BC22 057
+url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-057
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
-match = 20.6%%
-title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH016
-url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh016
+match = -10.5%%
+title = Bộ Chăn Ga Gối Eu04
+url = https://antbedding.com/bo-chan-ga-goi-eu04
 
 [shopee.vn]
 match = 50.0%%
@@ -72,9 +72,9 @@ title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22062
 url = https://songhong.info/chan-ga-goi-khong-chan-bc62
 
 [kona.com.vn]
-match = 58.8%%
-title = Bộ ga chần chăn 4 mùa MOC 2 - kona
-url = https://kona.com.vn/products/bo-ga-chan-chan-4-mua-moc-2
+match = 41.2%%
+title = Bộ ga chần chăn 4 mùa Diamond 188 - kona
+url = https://kona.com.vn/products/bo-ga-chan-chan-4-mua-diamond-188
 
 [www.everonvni.vn]
 match = 23.5%%
@@ -112,9 +112,9 @@ title = Chăn ga gối Sông Hồng hoạt hình trẻ em | Bộ chăn gối cho
 url = https://changagoidemsonghong.online/chan-ga-goi-hoat-hinh-tre-em.html?brand=1
 
 [everonvn.com.vn]
-match = -23.5%%
-title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807
+match = 20.0%%
+title = Báo giá chăn 4 mùa Everon
+url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon
 
 [staging.happynest.com.vn]
 match = 2.9%%
