--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-19 09:49:40
+lastsearch = 2024-07-19 11:46:14
 
 [tiki.vn]
-match = -138.9%%
-title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
+match = -122.2%%
+title = Mua Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi
 url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-cam-160-x-200-cm-p7695465.html
 
 [nemxinh.net]
@@ -32,9 +32,9 @@ title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
-match = -105.6%%
-title = Bộ Ga (Drap) Nệm Cotton Solid Edena Mẫu 358
-url = https://nemkimtrang.com/bo-ga-drap-nem-cotton-solid-edena-mau-358-chinh-hang-cao-cap
+match = -72.2%%
+title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 743
+url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-743-chinh-hang-cao-cap
 
 [demxanh.com]
 match = -77.8%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu xanh ngọc
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html
 
 [foreverbedding.net]
-match = -55.6%%
-title = Bộ ga phủ Common C96 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-common-c96
+match = -66.7%%
+title = Bộ ga phủ Passion A114 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-passion-a114
 
 [aeoneshop.com]
 match = -105.6%%
