--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-19 06:15:40
+lastsearch = 2024-07-19 11:46:03
 
 [hoa18.com]
 match = -84.2%%
@@ -205,4 +205,9 @@ url = https://vnews.gov.vn/news/lai-tau-bi-nem-da-vo-dau-khi-qua-yen-bai-127309.
 match = -115.8%%
 title = Mỗi địa phương phải xác định được sản phẩm công ...
 url = https://tuoitrethudo.vn/moi-dia-phuong-phai-xac-dinh-duoc-san-pham-cong-nghiep-van-hoa-254820.html
+
+[baothanhhoa.vn]
+match = -142.1%%
+title = 18 năm đồng hành tiếp lửa đam mê tri thức cho học sinh ...
+url = https://baothanhhoa.vn/vnpt-thanh-hoa-18-nam-dong-hanh-tiep-lua-dam-me-tri-thuc-cho-hoc-sinh-tinh-thanh-219919.htm
 
