--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-19 10:16:59
+lastsearch = 2024-07-19 11:47:31
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -47,9 +47,9 @@ title = nhà cái uy tín ♐️【WW88.game】Casino Online
 url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
-match = -143.8%%
-title = LẶNG LẼ CHIỀU TAN CA ! Ế DÀI CẢNH CHỢ CÔNG NHÂN ...
-url = https://www.youtube.com/watch?v=aMNreu6QNI8
+match = -200.0%%
+title = Vietnamese Baguette Recipe - BÁNH MÌ VIỆT NAM - KNEAD ...
+url = https://www.youtube.com/watch?v=yzQ6rCK8pJw
 
 [saigontourist.edu.vn]
 match = -162.5%%
@@ -82,9 +82,9 @@ title = Turtle Beach USA
 url = https://www.turtlebeach.com/search?q=✅+TK88+✅TK88+Đăng+Ký+Thành+Viên✅✅+Copy_Tk88.co+✅+Nhà+cái+uy+tín+✅++Seopro
 
 [moon.vn]
-match = -193.8%%
-title = Một con lắc lò xo dao động điều hòa theo phương thẳng ...
-url = https://moon.vn/hoi-dap/mot-con-lac-lo-xo-dao-dong-dieu-hoa-theo-phuong-thang-dung-chieu-dai-tu-nhien-cua-lo-659716
+match = -206.2%%
+title = Con lắc đơn chiều dài l = 0,5 (m), m = 100 gam dao động ở ...
+url = https://moon.vn/hoi-dap/con-lac-don-chieu-dai-l-05-m-m-100-gam-dao-dong-o-noi-co-g-98-ms2-voi-bien-do-goc-ba-679117
 
 [djexpress.com.vn]
 match = -68.8%%
