--- a/images/nem-di-a-mon-7f-14-tc/config.ini
+++ b/images/nem-di-a-mon-7f-14-tc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-7f-14-tc.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-18 23:53:21
+lastsearch = 2024-07-19 11:45:54
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -17,14 +17,14 @@ title = Defining the Northeast Monsoon of India - COAPS
 url = https://www.coaps.fsu.edu/~vmisra/nem-mwr.pdf
 
 [www.sec.gov]
-match = -9.5%%
-title = 0000063908-13-000078.txt
-url = https://www.sec.gov/Archives/edgar/data/63908/0000063908-13-000078.txt
+match = -4.8%%
+title = 0000950103-19-014407.txt
+url = https://www.sec.gov/Archives/edgar/data/19617/000095010319014407/0000950103-19-014407.txt
 
 [weblink.arroyogrande.org]
-match = -5.6%%
-title = Minutes 1972-06-13
-url = http://weblink.arroyogrande.org/WebLink/DocView.aspx?id=17685&dbid=2&repo=ArroyoGrande
+match = -11.1%%
+title = Laserfiche WebLink
+url = http://weblink.arroyogrande.org/WebLink/DocView.aspx?id=14819&dbid=0&repo=ArroyoGrande
 
 [docs.tosv.com]
 match = -23.8%%
