--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-19 07:58:39
+lastsearch = 2024-07-19 11:50:47
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -17,9 +17,9 @@ title = Fabiana Justus (@fabianajustus)
 url = https://www.instagram.com/fabianajustus/?hl=en
 
 [www.reddit.com]
-match = -135.0%%
-title = Riot is cutting back budget on esports? : r/leagueoflegends
-url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
+match = -115.0%%
+title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
+url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
 match = -33.3%%
@@ -27,9 +27,9 @@ title = Nam Joo-hyuk
 url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
-match = -140.0%%
-title = Korean Embassy in South Africa 주남아공한국대사관
-url = https://www.facebook.com/KoreanEmbassySouthAfrica/
+match = -160.0%%
+title = CDT Jake Sorrels successfully defended his senior thesis “ ...
+url = https://www.facebook.com/photo.php?fbid=2759708960745737&id=130999010283425&set=a.135510956498897&locale=hu_HU
 
 [www.vietnam.vn]
 match = -155.0%%
@@ -312,9 +312,9 @@ title = Original Article
 url = https://synapse.koreamed.org/articles/1119644
 
 [www.quora.com]
-match = 0.0%%
-title = 
-url = https://www.quora.com/Should-I-just-pronounce-네-as-DE-because-all-Koreans-say-it-like-that
+match = -100.0%%
+title = Why did my niece get 12%% Korean in her DNA test ...
+url = https://www.quora.com/Why-did-my-niece-get-12-Korean-in-her-DNA-test-My-side-of-the-family-is-Eastern-European-Italian-French-and-German-while-her-mother-is-Danish
 
 [liquipedia.net]
 match = -15.0%%
@@ -324,7 +324,7 @@ url = https://liquipedia.net/tft/Runeterra_Reforged/Championship
 [www.koreanclass101.com]
 match = 0.0%%
 title = 
-url = https://www.koreanclass101.com/korean-age/
+url = https://www.koreanclass101.com/lesson/absolute-beginner-questions-answered-by-jae-6-yes-in-korean?lp=9
 
 [www.gamekapocs.hu]
 match = -70.0%%
@@ -350,4 +350,9 @@ url = https://fonts.google.com/
 match = -65.0%%
 title = Mam Ruoc (Vietnamese Fermented Shrimp Paste)
 url = http://wanderingchopsticks.blogspot.com/2008/10/mam-ruoc-vietnamese-fermented-shrimp.html
+
+[stackoverflow.com]
+match = -155.0%%
+title = How to show `\` instead of special character `₩` in path ...
+url = https://stackoverflow.com/questions/77536855/how-to-show-instead-of-special-character-₩-in-path-separator-for-windows-f
 
