--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-07-19 11:52:49
+lastsearch = 2024-07-19 12:13:13
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -37,9 +37,9 @@ title = jun8877 com - Casino Online Uy Tín Nhất Châu Á Hiện Tại
 url = http://cangvuhanghaithanhhoa.com.vn/Card/jun8877_com.html
 
 [www.youtube.com]
-match = -46.4%%
-title = Lê Mật Đài Loan Bên E Giao Khách l Đếm Không Hết Quả ...
-url = https://www.youtube.com/watch?v=jnvflW7R2LY
+match = -35.7%%
+title = WATERCOLOR METHOD ON 613 LACE FRONT | ALI QUEEN
+url = https://www.youtube.com/watch?v=VRM_KBuy5ug
 
 [trangbom.dongnai.gov.vn]
 match = 3.6%%
@@ -107,9 +107,9 @@ title = 14 năm Rooney ra mắt MU: Hat-trick huyền thoại, "Quỷ đầu ...
 url = https://www.24h.com.vn/bong-da/14-nam-rooney-ra-mat-mu-hat-trick-huyen-thoai-quy-dau-dan-gam-vang-c48a993554.html
 
 [www.facebook.com]
-match = -42.9%%
-title = Nhà thờ Đào Viên, Đài Loan chiều Chủ nhật 7-7 tổ chức ...
-url = https://www.facebook.com/RFAVietnam/photos/nhà-thờ-đào-viên-đài-loan-chiều-chủ-nhật-7-7-tổ-chức-thánh-lễ-cầu-nguyện-cho-các/10157502682499571/
+match = -25.0%%
+title = HÀNH TRÌNH “PEEL DA” 14 NGÀY BẰNG MANDELIC ...
+url = https://www.facebook.com/trustpluscuanam/photos/a.113295247201464/113295160534806/?type=3
 
 [trongdoitam1.mysapo.net]
 match = 14.3%%
