--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-07-19 09:02:06
+lastsearch = 2024-07-19 12:16:49
 
 [demxanh.com]
-match = -18.5%%
-title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
-url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
+match = 37.0%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [demre.com.vn]
-match = 66.7%%
-title = chiếu trúc hạt đen- trắng 160x200
-url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200-2
+match = 70.4%%
+title = chiếu trúc hạt đen-trắng 160x200
+url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200-3
 
 [sieuthitretho.vn]
 match = 3.7%%
@@ -42,9 +42,9 @@ title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
 url = https://thegioidemviet.vn/chieu-truc/
 
 [www.diepxuan.com]
-match = 63.0%%
-title = Điệp Xuân Chiếu trúc Thái đen 160x200
-url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
+match = 51.9%%
+title = Điệp Xuân Chiếu trúc Thai đen 140x190
+url = https://www.diepxuan.com/chieu-truc-thai-den-140x190.html
 
 [shopee.vn]
 match = -48.1%%
@@ -65,4 +65,24 @@ url = https://changagoidemdep.vn/chieu-truc-den.html
 match = -29.6%%
 title = Chiếu trúc hạt Thái Bình cao cấp 160x200 tại Hà Nội - DaiSan
 url = https://search.daisan.vn/item/hangtieudung/chieu-truc-hat-thai-binh-cao-cap-160x200-tai-ha-noi-sieuthitrethovn-2497.html
+
+[thegioichieutruc.com]
+match = 65.4%%
+title = Chiếu trúc hạt đen cao cấp
+url = https://thegioichieutruc.com/chieu-truc-hat-den-cao-cap/
+
+[chieutruc.info]
+match = -29.6%%
+title = Bảng giá chiếu Thái Lan dòng gấp vân gỗ cao cấp
+url = https://chieutruc.info/chieu-thai-lan-gap-van-go/
+
+[www.ppzw.com]
+match = -144.4%%
+title = Bursa cinetech zafer plaza tel Devude gelichadu songs ... - 品牌总网
+url = http://www.ppzw.com/dh/go.asp?url=http://xn--b1awbidf.xn--p1ai/754819211fe43z
+
+[www.museum.ru]
+match = -103.7%%
+title = العرب مول جدة: Radio portuguesa elvas Купить зимние кроссовки ...
+url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=http://dwcae.ru/po69Meafe
 
