--- a/images/nem-caosu-lien-a-180x200x10-classic/config.ini
+++ b/images/nem-caosu-lien-a-180x200x10-classic/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-180x200x10-classic.html
 lastopen = 2024-07-02 13:17:37
 
 [search]
-lastsearch = 2024-07-19 10:16:06
+lastsearch = 2024-07-19 13:21:46
 
 [nemgiakho.com]
 match = 11.4%%
@@ -34,7 +34,7 @@ url = https://www.sieuthinem.com/ct-san-pham/30/nem-lien-a-nem-cao-su-lien-a-khu
 [demxanh.com]
 match = 5.7%%
 title = [Hot] Bảng giá nệm cao su Liên Á khuyến mãi 2024
-url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html
+url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html?srsltid=AfmBOoo0yzQUo7g5l3a2tGp4l6Omym2dkZ8NRppQ2O5C9nD7-EGS7Tlj
 
 [www.thegioinemvip.com]
 match = -8.6%%
@@ -69,7 +69,7 @@ url = https://websosanh.vn/s/nệm+cao+su+liên+á+180x200x10.htm
 [thegioinem.com]
 match = 8.6%%
 title = Bảng Giá Nệm Cao Su Liên Á Khuyến Mãi Mới Nhất 2024
-url = https://thegioinem.com/bang-gia-nem-cao-su-lien-a.html
+url = https://thegioinem.com/bang-gia-nem-cao-su-lien-a.html?srsltid=AfmBOoo6rh2SMbKZ25qc6tKK9zOSZyWbc8ISXpA_c-XH0GnKFrOkHhOY
 
 [shopee.vn]
 match = 51.4%%
