--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-19 04:52:21
+lastsearch = 2024-07-19 13:52:01
 
 [chieutruc.info]
 match = -100.0%%
@@ -27,24 +27,24 @@ title = Mang thai 18 tuần nặng bao nhiêu cân để bé phát triển tốt
 url = https://nhathuoclongchau.com.vn/bai-viet/thai-18-tuan-nang-bao-nhieu-thay-doi-cua-me-bau-mang-thai-18-tuan.html
 
 [www.vinmec.com]
-match = -18.2%%
-title = Các chỉ số trong kết quả siêu âm thai
-url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/cac-chi-so-trong-ket-qua-sieu-am-thai/
+match = 4.5%%
+title = Sự phát triển của thai nhi tuần 18
+url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/san-phu-khoa-va-ho-tro-sinh-san/su-phat-trien-cua-thai-nhi-tuan-18/
 
 [www.youtube.com]
-match = -109.1%%
-title = 🔴 Trực Tiếp | U18 Việt Nam - U18 Thái Lan | Việt Nam Khẳng ...
-url = https://www.youtube.com/watch?v=uPDPr__M7aI
+match = -68.2%%
+title = 60 Giây Sáng - Ngày 18/07/2024 | HTV Tin tức
+url = https://www.youtube.com/watch?v=TWwQZOqNQd4
 
 [www.facebook.com]
-match = 45.5%%
-title = Chiếu Cói Thân Vui Thái Bình
-url = https://www.facebook.com/p/Chiếu-Cói-Thân-Vui-Thái-Bình-100069860554625/
+match = 40.9%%
+title = Chiếu Cói Cao Cấp Nga Sơn
+url = https://www.facebook.com/chieucoiviettrang/
 
 [medlatec.vn]
-match = -50.0%%
-title = Các chỉ số thai nhi và những điều mẹ cần biết
-url = https://medlatec.vn/tin-tuc/cac-chi-so-thai-nhi-va-nhung-dieu-me-can-biet-s195-n19747
+match = -109.1%%
+title = Sự phát triển của thai 18 tuần và những thay đổi trên cơ ...
+url = https://medlatec.vn/tin-tuc/su-phat-trien-cua-thai-18-tuan-va-nhung-thay-doi-tren-co-the-thai-phu-s74-n28778
 
 [www.lazada.vn]
 match = -68.2%%
