--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-19 11:41:09
+lastsearch = 2024-07-19 13:51:50
 
 [www.lazada.vn]
 match = -88.9%%
@@ -27,9 +27,9 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.facebook.com]
-match = -94.4%%
-title = Siêu Thị Nệm - 148 Nguyễn Thị Thập, Q.7, HCM
-url = https://www.facebook.com/sieuthinem148/
+match = -105.6%%
+title = Người Việt Omaha Nebraska USA | 💥 NEM CUA BỂ ...
+url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
 
 [eva.vn]
 match = -150.0%%
