--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-07-19 11:34:06
+lastsearch = 2024-07-19 14:27:42
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -12,14 +12,14 @@ title = Everon EPT20041 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
 url = https://www.everonvn.vn/chi-tiet/Everon-EPT20041.html
 
 [everon.online]
-match = 6.7%%
-title = Bộ ga chun chần
-url = https://everon.online/collections/types?q=bo-ga-chun-chan
+match = -53.6%%
+title = Tổng Đại Lý Chăn Ga Gối Đệm Everon Artemis King Koil
+url = https://everon.online/collections/dem-everon-kich-thuoc-1m4-140-190-140-200-140x190-140x200
 
 [www.diepxuan.com]
-match = 3.6%%
-title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
+match = -17.9%%
+title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
+url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
 
 [demxanh.com]
 match = -32.1%%
@@ -38,13 +38,13 @@ url = https://everonvn.com.vn/everon/77/dem-bong-ep-everon
 
 [changagoidemsonghong.com]
 match = -53.6%%
-title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22052
-url = https://changagoidemsonghong.com/chan-ga-goi-khong-chan-bc52
+title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22062
+url = https://changagoidemsonghong.com/chan-ga-goi-khong-chan-bc62
 
 [songhong.info]
 match = -53.6%%
-title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22051
-url = https://songhong.info/chan-ga-goi-khong-chan-bc51
+title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22063
+url = https://songhong.info/chan-ga-goi-khong-chan-bc63
 
 [www.changagoidemeveron.vn]
 match = 0.0%%
