--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-07-18 21:35:07
+lastsearch = 2024-07-19 14:31:39
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -27,9 +27,9 @@ title = Bảo tồn và phát triển nghề dệt chiếu lác - di sản phi v
 url = https://dangcongsan.vn/tu-tuong-van-hoa/bao-ton-va-phat-trien-nghe-det-chieu-lac--di-san-phi-vat-the-quoc-gia-290444.html
 
 [www.thegioididong.com]
-match = -156.2%%
-title = Tham gia game đăng kí thông tin nhận ngay OPPO ...
-url = https://www.thegioididong.com/dat-truoc/oppo-reno12-5g
+match = -118.8%%
+title = realme C12 - Chính hãng, giá tốt, có trả góp
+url = https://www.thegioididong.com/dtdd/realme-c12
 
 [moon.vn]
 match = -175.0%%
