--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-19 13:44:55
+lastsearch = 2024-07-19 14:30:42
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -12,9 +12,9 @@ title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
 
 [shopee.vn]
-match = 32.1%%
-title = chiếu nhựa gấp gọn Thái Bình tiện dụng
-url = https://shopee.vn/chiếu-nhựa-gấp-gọn-Thái-Bình-tiện-dụng-i.114438421.3932155248
+match = -25.0%%
+title = Chiếu nhựa gấp gọn size 2m ×3m chiếu ăn cơm hàng đẹp ...
+url = https://shopee.vn/Chiếu-nhựa-gấp-gọn-size-2m-×3m-chiếu-ăn-cơm-hàng-đẹp-nhiều-màu-i.114438421.4732248740
 
 [tiki.vn]
 match = -21.4%%
