--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-19 08:00:11
+lastsearch = 2024-07-19 14:34:23
 
 [demxanh.com]
 match = -42.9%%
@@ -53,8 +53,8 @@ url = http://loa2.pmang.jp/pmang/notice/topic/newest?url=https://xn--b1avdibc.xn
 
 [61.19.69.198]
 match = 3.6%%
-title = White rose mr robot [tnceOI]
-url = http://61.19.69.198/ULIB//dublin.linkout.php?url=https://xn---43-5cdbj5bm7a9g.xn--p1ai/wKB2gfVdgsfe98
+title = St enochs food court [yHdslh]
+url = http://61.19.69.198/ULIB//dublin.linkout.php?url=https://xn----9sblbban5beclw3gwa3cj5c.xn--p1ai/7FL2JeWz53afe
 
 [www.continentalshelf.org]
 match = -71.4%%
@@ -152,9 +152,9 @@ title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn----ctbbfhtdwrbb1ale.xn--p1ai/9618573etpm-internationalcomafe88y
 
 [www.lebguide.com]
-match = -7.1%%
-title = David sylvian height - Lebanon Guide
-url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1axcfdv.xn--p1ai/25681974moyanwxcomv4fe36a
+match = 3.6%%
+title = Hotels in Lebanon - LebGuide.com
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://911soft.ru/71ycalfe98.htm
 
 [news.google.it]
 match = -3.6%%
