--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-19 13:35:39
+lastsearch = 2024-07-19 14:31:29
 
 [www.georgianicols.com]
 match = -184.6%%
@@ -237,9 +237,9 @@ title = Henny Penny EC05-001 TERM RING #10 16-14 GA NI PL
 url = https://www.partstown.com/henny-penny/henec05-001
 
 [pubs.acs.org]
-match = -330.8%%
-title = Ni(4-tBustb)3: A Robust 16-Electron Ni(0) Olefin Complex for ...
-url = https://pubs.acs.org/doi/10.1021/acs.organomet.0c00485
+match = -338.5%%
+title = Structure and Role of a Ga-Promoter in Ni-Based Catalysts for ...
+url = https://pubs.acs.org/doi/10.1021/jacsau.3c00677
 
 [www.postercompliance.com]
 match = -207.7%%
