--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-07-19 13:45:07
+lastsearch = 2024-07-19 14:30:08
 
 [tuananh.vn]
 match = 22.2%%
@@ -12,9 +12,9 @@ title = Đệm Korea Gấm Plus
 url = https://tuananh.vn/dem-korea-gam-plus-p223.html
 
 [demxanh.com]
-match = -28.0%%
-title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
-url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
+match = -48.0%%
+title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
 
 [demkhangduy.com]
 match = 25.0%%
@@ -90,4 +90,9 @@ url = https://www.demgiare.net/tag/dem-tuan-anh
 match = -76.0%%
 title = Đệm Korea Gấm Plus sự kết hợp bông Nano kháng khuẩn và ...
 url = https://sieuthidemonline.vn/dem-korea-gam-plus/
+
+[www.facebook.com]
+match = 0.0%%
+title = Đệm Tuấn Anh - Đồng Hành Cùng Tổ Ấm
+url = https://www.facebook.com/tuananh.vn/?locale=vi_VN
 
